# mycel

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  index.html  project.glossary.json  project.intent.md
.github/workflows/: release.yml  site.yml
docs/: architecture.md  key-enc-v2.md  plan-local-agent-mesh.md  research-agent-thread-deep-dive.md  research-agent-thread-landscape.md  research-channels-resilience.md  rfc-local-first-transport-boundary.md  rfc-v0.2-phase0-contracts.md  roadmap.md
npm/: .gitignore  README.md  install.js  package.json
scripts/: check-site-release-metadata.js
src/: config.rs  envelope.rs  error.rs  main.rs  sync.rs  test_support.rs  types.rs
src/cli/: contacts.rs  doctor.rs  id.rs  inbox.rs  init.rs  mod.rs  send.rs  status.rs  thread.rs  watch.rs
src/core/: directory.rs  ingest.rs  mod.rs  router.rs
src/crypto/: mod.rs
src/nostr/: mod.rs
src/store/: mod.rs
src/transport/: mod.rs  nostr.rs
tests/: integration.rs  outbox_test.rs  qa_step1_3_5.rs
