[package]
name = "mycel"
version = "0.1.1"
edition = "2024"
description = "Encrypted async mailbox for AI CLI agents"
license = "MIT"
repository = "https://github.com/heurema/mycel"
homepage = "https://mycel.run"
readme = "README.md"
keywords = ["nostr", "messaging", "cli", "agents", "encrypted"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "mycel"
path = "src/main.rs"

[dependencies]
# Nostr
nostr-sdk = { version = "0.44", features = ["nip59"] }

# Async
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal"] }

# CLI
clap = { version = "4.6", features = ["derive"] }

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Crypto (key encryption at rest)
keyring = "3.6"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

# Utils
directories = "6.0"
rpassword = "7.4"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = "0.4.2"
libc = "0.2.183"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
strip = true
lto = true
